// Proto to connect Java Gateway to Python Users-service

/* 
    Java protoc complation done for you throug Gradle ( ./gradlew clean build )

*/

syntax = "proto3";

option java_multiple_files = true;
option java_package = 'com.grpc.services.users'; 

service UserService {
    rpc GetUserData(UserRequest) returns (UserResponse);
    rpc GetRoute(UserRequest) returns (UserResponse);
    rpc GetMultipleRoutes(UserRequest) returns (UserResponse);
}

message UserRequest {
    string body = 1;
}

message UserResponse {
    string body = 1;
    int32 status = 3;
}